--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -9,4 +9,18 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string-array name="questions_array">
+        <item>Who was Gandalf?</item>
+        <item>What is capital city of Gondor</item>
+        <item>Where Aragorn grew up?</item>
+        <item>Who had Three Rings?</item>
+        <item>Who was Ringwraits?</item>
+        <item>What is names of Elendil sons?</item>
+        <item>Who created orcs?</item>
+        <item>When Wizards arrived to Middleearth?</item>
+        <item>Who created dwarfs?</item>
+        <item>When The Rings was forged?</item>
+    </string-array>
 </resources>
+
