--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -12,17 +12,20 @@
     <string name="tolkien_quiz_app">tolkien_quiz_app</string>
     <string name="question_text">question_text</string>
 
+    <string name="generic_true>True</string>
+    <string name="generic_false">False</string>
+
     <string name="question_1">Is Gandalf was Istari?</string>
-    <string name="question_1_answer_correct">True</string>
-    <string name="question_1_answer_incorrect_1">False</string>
+    <string name="question_1_answer_correct" translatable="false">@string/generic_true</string>
+    <string name="question_1_answer_incorrect_1" translatable="false">@string/generic_false</string>
     <string name="question_2">Is Nazgul was men before?</string>
-    <string name="question_2_answer_correct">True</string>
-    <string name="question_2_answer_incorrect_1">False</string>
+    <string name="question_2_answer_correct" translatable="false">@string/generic_true</string>
+    <string name="question_2_answer_incorrect_1" translatable="false">@string/generic_false</string>
     <string name="question_3">Is Aragorn was heir of Isildur?</string>
-    <string name="question_3_answer_correct">True</string>
-    <string name="question_3_answer_incorrect_1">False</string>
+    <string name="question_3_answer_correct" translatable="false">@string/generic_true</string>
+    <string name="question_3_answer_incorrect_1" translatable="false">@string/generic_false</string>
     <string name="question_4">Is Radagast was cousin of Gandalf?</string>
-    <string name="question_4_answer_correct">True</string>
-    <string name="question_4_answer_incorrect_1">False</string>
+    <string name="question_4_answer_correct" translatable="false">@string/generic_true</string>
+    <string name="question_4_answer_incorrect_1" translatable="false">@string/generic_false</string>
 </resources>
 
