--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="tolkien_quiz_app">tolkien_quiz_app</string>
     <string name="question_text">question_text</string>
 
-    <string name="generic_true>True</string>
+    <string name="generic_true">True</string>
     <string name="generic_false">False</string>
 
     <string name="question_1">Is Gandalf was Istari?</string>
