--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -15,16 +15,16 @@
     <string name="generic_true">True</string>
     <string name="generic_false">False</string>
 
-    <string name="question_1">Is Gandalf was Istari?</string>
+    <string name="question_1">Was Gandalf Istari?</string>
     <string name="question_1_answer_correct" translatable="false">@string/generic_true</string>
     <string name="question_1_answer_incorrect_1" translatable="false">@string/generic_false</string>
-    <string name="question_2">Is Nazgul was men before?</string>
+    <string name="question_2">Was Nazgul men before?</string>
     <string name="question_2_answer_correct" translatable="false">@string/generic_true</string>
     <string name="question_2_answer_incorrect_1" translatable="false">@string/generic_false</string>
-    <string name="question_3">Is Aragorn was heir of Isildur?</string>
+    <string name="question_3">Was Aragorn heir of Isildur?</string>
     <string name="question_3_answer_correct" translatable="false">@string/generic_true</string>
     <string name="question_3_answer_incorrect_1" translatable="false">@string/generic_false</string>
-    <string name="question_4">Is Radagast was cousin of Gandalf?</string>
+    <string name="question_4">Was Radagast cousin of Gandalf?</string>
     <string name="question_4_answer_correct" translatable="false">@string/generic_true</string>
     <string name="question_4_answer_incorrect_1" translatable="false">@string/generic_false</string>
 </resources>
