--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+    <string name="correct_answer">Correct answer!</string>
+    <string name="incorrect_answer">Incorrect answer!</string>
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="tolkien_quiz_app">tolkien_quiz_app</string>
